# Diplomado

./: README.md
app/: Dockerfile  README.md  app.py  model_metadata.joblib  pyproject.toml  training_history.joblib
parte0/: README.md  model.keras.py  pyproject.toml  train_model.py  train_model_version.completa.ipynb
