[tool.poetry]
name = "parte1"
version = "0.1.0"
description = "Aplicación Streamlit para clasificar imágenes CIFAR-10"
authors = ["felipe.caceres.caro@gmail.com"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
tensorflow = "2.16.1"
streamlit = "^1.28.0"
pillow = "^10.0.0"
joblib = "^1.3.0"
numpy = "^1.26.0"
matplotlib = "^3.7.0"
seaborn = "^0.12.0"
scikit-learn = "^1.3.0"
plotly = "^5.17.0"
opencv-python-headless = "^4.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
