[project]
name = "parte0"
version = "0.0"
description = "proyect keras.model"
authors = [
    {name = "Felipe Cáceres"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "tensorflow (>=2.15.0,<2.19.0)",
    "numpy (>=1.26.0,<2.2.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "scikit-learn (>=1.7.0,<2.0.0)",
    "seaborn (>=0.13.2,<0.14.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
